# harmonia

./: .gitignore  .mergify.yml  Cargo.toml  README.md  config.vcl  default.nix  flake.nix  garnix.yaml  harmonia.toml  module.nix  shell.nix
.github/workflows/: update-flake-lock.yml
harmonia/: Cargo.toml
harmonia/src/: buildlog.rs  cacheinfo.rs  config.rs  daemon.rs  main.rs  nar.rs  narinfo.rs  narlist.rs  serve.rs  signing.rs  store.rs
libnixstore/: Cargo.toml  README.md  build.rs
libnixstore/include/: nix.h
libnixstore/src/: lib.rs  nix.cpp
scripts/: create-release.sh
src/: buildlog.rs  cacheinfo.rs  config.rs  daemon.rs  main.rs  nar.rs  narinfo.rs  narlist.rs  root.rs  serve.rs  signing.rs  store.rs
tests/: cache2.pk  cache2.sk  lib.nix  t00-simple.nix  t01-signing.nix  t02-varnish.nix  t03-chroot.nix  t04-tls.nix  tls-cert.pem  tls-csr.pem  tls-key.pem
