[package]
name = "harmonia"
version = "1.0.2"
authors = [
  "Jörg Thalheim <joerg@thalheim.io>",
  "Simon Hauser <simon.hauser@helsinki-systems.de>"
]
edition = "2021"
license = "MIT"
homepage = "https://github.com/nix-community/harmonia"
repository = "https://github.com/nix-community/harmonia.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-zstd", "cookies", "openssl"] }
openssl = { version = "0.10" }
actix-files = "0.6.6"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
mime = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["sync", "fs", "io-util", "rt", "macros"] }
tokio-stream = { version = "0.1" }
http-range = "0.1"
askama_escape = "0.10.3"
percent-encoding = "2.3.1"
anyhow = "1.0.93"
tempfile = "3.10.1"
url = "2.5.2"
async-compression = { version = "0.4.17", features = ["tokio", "bzip2"] }
tokio-util = "0.7.12"


libnixstore = { path = "../libnixstore" }

[build-dependencies]
pkg-config = "0.3"
